FIX(simple-animation): Added a class `sa-collapsed` to start elements off as collapsed and updated the Collapse JS function to take better advantage of that. This fixes a few issues with getting elements to start collapsed.

--- a/packages/simple-animation/src/styles/animations/expand-collapse.scss
+++ b/packages/simple-animation/src/styles/animations/expand-collapse.scss
@@ -3,3 +3,8 @@
   transform-origin: top left;
   overflow: hidden;
 };
+
+&.collapsed{
+  max-height: 0;
+  overflow: hidden;
+}
